--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
----
-sources:
+removed_sources:
   garcon-0.2.1.tar.bz2: 5328851ce29927a874a1cd50c09dd124a5e45272
+sources:
+  garcon-0.3.0.tar.bz2: c0ff6ccd33fbb2db6a13a06a71731c191ce0dfb2
