--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   garcon-0.4.0.tar.bz2: 9978c7f3181f7d8fd930cce74293d2a360743182
-sources:
   garcon-0.6.1.tar.bz2: 88fcaeca5fc42bb573ce7e6277bbf98a78967f57
+sources:
+  garcon-0.6.2.tar.bz2: c822cd8eec963ab8ffee33670550f6b163d3fe26
